# Sumbaev_course_project_3

./: README.md  main.py  pyproject.toml
tests/: test_functions.py  test_load_data.json
utils/: functions.py
