[tool.poetry]
name = "sumbaev-course-project-3"
version = "0.1.0"
description = ""
authors = ["m.sumbaev <sumbaevmaksim98@gmail.com>"]
readme = "README.md"
packages = [{include = "sumbaev_course_project_3"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
